Fixed page load info layout bugs

--- a/assets/css/in_room.css
+++ b/assets/css/in_room.css
@@ -1608,17 +1608,33 @@ main {
   margin-bottom: 0.26vw;
 }
 
-#page_load_info {
+#page_load_info_wrap {
   position: fixed;
-  top: 50%;
-  left: 50%;
+  top: 0px;
+  left: 0px;
   z-index: 99;
-  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#page_load_info {
+  position: relative;
   background-color: #fff;
   max-width: 40.625vw;
   width: 100%;
   padding: 1.042vw;
   border-radius: 0.521vw;
+  transform: translateY(30px);
+  opacity: 0;
+  transition: 400ms;
+}
+
+#page_load_info.show {
+  transform: translateY(0px);
+  opacity: 1;
 }
 
 #page_load_info #close_page_load_info {
@@ -1626,6 +1642,8 @@ main {
   top: 1.042vw;
   right: 1.042vw;
   cursor: pointer;
+  width: 1.302vw;
+  height: 1.302vw;
 }
 
 #page_load_info .title {
@@ -1636,6 +1654,8 @@ main {
 
 #page_load_info .title svg {
   margin-right: 0.521vw;
+  width: 1.563vw;
+  height: 1.563vw;
 }
 
 #page_load_info .title p {
@@ -1646,7 +1666,9 @@ main {
 
 #page_load_info > img,
 #page_load_info > p {
+  font-size: 0.833vw;
   margin-bottom: 0.781vw;
+  line-height: 140%;
 }
 
 #page_load_info > img {
@@ -1968,6 +1990,17 @@ main {
   #send_files {
     top: 1.25vw;
     right: 0.625vw;
+  }
+
+  #page_load_info > img,
+  #page_load_info > p {
+    font-size: 1vw;
+    margin-bottom: 0.938vw;
+  }
+
+  #page_load_info #close_page_load_info {
+    width: 1.563vw;
+    height: 1.563vw;
   }
 }
 
@@ -2338,6 +2371,35 @@ main {
   #send_files {
     top: 1.852vw;
     right: 0.926vw;
+  }
+
+  #page_load_info {
+    max-width: 780px;
+  }
+
+  #page_load_info .title svg {
+    width: 2.778vw;
+    height: 2.778vw;
+  }
+
+  #page_load_info .title p {
+    font-size: 1.481vw;
+  }
+
+  #page_load_info > img,
+  #page_load_info > p {
+    font-size: 1.481vw;
+    margin-bottom: 1.389vw;
+  }
+
+  #page_load_info > img {
+    max-width: initial;
+    width: auto;
+  }
+
+  #page_load_info #close_page_load_info {
+    width: 2.315vw;
+    height: 2.315vw;
   }
 }
 
@@ -2736,11 +2798,17 @@ main {
   
   #page_load_info > img,
   #page_load_info > p {
+    font-size: 2.051vw;
     margin-bottom: 1.923vw;
   }
 
   #page_load_info > img {
     max-width: 82.051vw;
+  }
+
+  #page_load_info #close_page_load_info {
+    width: 3.205vw;
+    height: 3.205vw;
   }
 }
 
@@ -3223,11 +3291,18 @@ main {
   
   #page_load_info > img,
   #page_load_info > p {
+    font-size: 2.759vw;
     margin-bottom: 2.586vw;
   }
 
   #page_load_info > img {
     max-width: 110.345vw;
+    width: 100%;
+  }
+
+  #page_load_info #close_page_load_info {
+    width: 4.31vw;
+    height: 4.31vw;
   }
 }
 
